# next-speed

./: .gitignore  01_make_sentences.py  02_embed_sentences.py  03_fit_rvq.py  03b_encode_codes.py  04_build_datasets.py  04_build_training_sets.py  05_train_sentence_lm.py  06_train_decoder.py  07_generate.py  08_chat.py  09_server.py  README.md  code_agreement_eval.py  infer.py  pyproject.toml  rvq_recon_error.py  sent_lm_eval.py  utils.py
tools/: build_qa_mix.py  check_code_tokens.py  check_decoder_targets.py  clean_decoder_jsonl.py  clean_text.py  export_instruct_docs.py  export_wikimedia_wikipedia.py  make_decoder_from_qa.py  make_instruct_decoder_jsonl.py  make_instruct_jsonl.py  make_qa_jsonl.py  mix_decoder_jsonl.py  mix_jsonl.py  pull_hf_instruct.py  run_baseline_eval.sh
