[project]
name = "next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "fastapi>=0.115.0",
    "faiss-gpu-cu12>=1.13.2",
    "numpy>=2.0,<3",
    "pysbd>=0.3.4",
    "torch>=2.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.30.0",
    "orjson>=3.11.5",
    "ftfy>=6.3.1",
    "regex>=2025.11.3",
    "sentence-transformers>=5.2.0",
]
